--- a/x.html
+++ b/x.html
@@ -1,21 +1,21 @@
 <html><head><title>bookmarklist.py</title>
 <link rel="stylesheet" type="text/css" href="style.css" media="screen"/>
 </head><body><ul>
-<li><pre><a id="1" href='https://et.wikipedia.org'>  1| https://et.wikipedia.org</a></pre></li>
-<li><pre><a id="2" href='https://super.secret.intra'>  2| https://super.secret.intra</a></pre></li>
-<li><pre><a id="3" href='http://localhost:8080'>  3| http://localhost:8080</a></pre></li>
-<li><pre><a id="4" href='https://example.com'>  4| https://example.com</a></pre></li>
-<li><pre><a id="5" href='http://ww.ee'>  5| http://ww.ee</a></pre></li>
-<li><pre><a id="6" href='htp:/inv%3Ca%3Elisd%3E%26#123%3B%26amp%3B%3B'>  6| htp:/inv&lt;a&gt;lisd&gt;&amp;#123;&amp;amp;;</a></pre></li>
-<li><pre><a id="7" href='https://wer.ee'>  7| https://wer.ee</a></pre></li>
-<li><pre><a id="8" href='ssh://user@localhost'>  8| ssh://user@localhost</a></pre></li>
-<li><pre><a id="9" href='https://haha not a proto here'>  9| haha not a proto here</a></pre></li>
-<li><pre><a id="10" href='https://lolz no protolol/%2Band%20a%20bit%20of%20path%2B'> 10| lolz no protolol/and a bit of path</a></pre></li>
-<li><pre><a id="11" href='http://hello there/ok%20nice'> 11| http://hello there/ok nice</a></pre></li>
-<li><pre><a id="12" href='gemini://tilde.pink'> 12| gemini://tilde.pink</a></pre></li>
-<li><pre><a id="13" href='https://no-proto#cool'> 13| no-proto#cool</a></pre></li>
-<li><pre><a id="14" href='http://example.com:80/a?query=nothn+much&nada_arg#fragment%20is%20cool'> 14| http://example.com:80/a?query=nothn much&amp;nada_arg#fragment is cool</a></pre></li>
-<li><pre><a id="16" href='https://just a?anoth+er=on+e%3D&here%27s+some=more&que+ry&nope'> 16| just a?que ry&amp;anoth er=on e=&amp;here&#x27;s some=more&amp;nope</a></pre></li>
-<li><pre><a id="17" href='https://no_protocol?&%3F'> 17| no_protocol??</a></pre></li>
+<li><pre><span><a href=id="1">  1| </a></span><a id="1" href='https://et.wikipedia.org'>https://et.wikipedia.org</a></pre></li>
+<li><pre><span><a href=id="2">  2| </a></span><a id="2" href='https://super.secret.intra'>https://super.secret.intra</a></pre></li>
+<li><pre><span><a href=id="3">  3| </a></span><a id="3" href='http://localhost:8080'>http://localhost:8080</a></pre></li>
+<li><pre><span><a href=id="4">  4| </a></span><a id="4" href='https://example.com'>https://example.com</a></pre></li>
+<li><pre><span><a href=id="5">  5| </a></span><a id="5" href='http://ww.ee'>http://ww.ee</a></pre></li>
+<li><pre><span><a href=id="6">  6| </a></span><a id="6" href='htp:/inv%3Ca%3Elisd%3E%26#123%3B%26amp%3B%3B'>htp:/inv&lt;a&gt;lisd&gt;&amp;#123;&amp;amp;;</a></pre></li>
+<li><pre><span><a href=id="7">  7| </a></span><a id="7" href='https://wer.ee'>https://wer.ee</a></pre></li>
+<li><pre><span><a href=id="8">  8| </a></span><a id="8" href='ssh://user@localhost'>ssh://user@localhost</a></pre></li>
+<li><pre><span><a href=id="9">  9| </a></span><a id="9" href='https://haha not a proto here'>haha not a proto here</a></pre></li>
+<li><pre><span><a href=id="10"> 10| </a></span><a id="10" href='https://lolz no protolol/%2Band%20a%20bit%20of%20path%2B'>lolz no protolol/and a bit of path</a></pre></li>
+<li><pre><span><a href=id="11"> 11| </a></span><a id="11" href='http://hello there/ok%20nice'>http://hello there/ok nice</a></pre></li>
+<li><pre><span><a href=id="12"> 12| </a></span><a id="12" href='gemini://tilde.pink'>gemini://tilde.pink</a></pre></li>
+<li><pre><span><a href=id="13"> 13| </a></span><a id="13" href='https://no-proto#cool'>no-proto#cool</a></pre></li>
+<li><pre><span><a href=id="14"> 14| </a></span><a id="14" href='http://example.com:80/a?query=nothn+much&nada_arg#fragment%20is%20cool'>http://example.com:80/a?query=nothn much&amp;nada_arg#fragment is cool</a></pre></li>
+<li><pre><span><a href=id="16"> 16| </a></span><a id="16" href='https://just a?anoth+er=on+e%3D&here%27s+some=more&que+ry&nope'>just a?que ry&amp;anoth er=on e=&amp;here&#x27;s some=more&amp;nope</a></pre></li>
+<li><pre><span><a href=id="17"> 17| </a></span><a id="17" href='https://no_protocol?&%3F'>no_protocol??</a></pre></li>
 
 </ul></body></html>
