--- a/x.html
+++ b/x.html
@@ -1,21 +1,22 @@
 <html><head><title>bookmarklist.py</title>
 <link rel="stylesheet" type="text/css" href="style.css" media="screen"/>
 </head><body><ul>
-<li><pre><span><a href="#1">  1| </a></span><a id="1" href='https://et.wikipedia.org'>https://et.wikipedia.org</a></pre></li>
+<li><pre><span><a href="#1">  1| </a></span><a id="1" href='https://vikipeedia!'>https://et.wikipedia.org</a></pre></li>
 <li><pre><span><a href="#2">  2| </a></span><a id="2" href='https://super.secret.intra'>https://super.secret.intra</a></pre></li>
 <li><pre><span><a href="#3">  3| </a></span><a id="3" href='http://localhost:8080'>http://localhost:8080</a></pre></li>
 <li><pre><span><a href="#4">  4| </a></span><a id="4" href='https://example.com'>https://example.com</a></pre></li>
 <li><pre><span><a href="#5">  5| </a></span><a id="5" href='http://ww.ee'>http://ww.ee</a></pre></li>
-<li><pre><span><a href="#6">  6| </a></span><a id="6" href='htp:/inv%3Ca%3Elisd%3E%26#123%3B%26amp%3B%3B'>htp:/inv&lt;a&gt;lisd&gt;&amp;#123;&amp;amp;;</a></pre></li>
-<li><pre><span><a href="#7">  7| </a></span><a id="7" href='https://wer.ee'>https://wer.ee</a></pre></li>
-<li><pre><span><a href="#8">  8| </a></span><a id="8" href='ssh://user@localhost'>ssh://user@localhost</a></pre></li>
-<li><pre><span><a href="#9">  9| </a></span><a id="9" href='https://haha not a proto here'>haha not a proto here</a></pre></li>
-<li><pre><span><a href="#10"> 10| </a></span><a id="10" href='https://lolz no protolol/%2Band%20a%20bit%20of%20path%2B'>lolz no protolol/and a bit of path</a></pre></li>
-<li><pre><span><a href="#11"> 11| </a></span><a id="11" href='http://hello there/ok%20nice'>http://hello there/ok nice</a></pre></li>
-<li><pre><span><a href="#12"> 12| </a></span><a id="12" href='gemini://tilde.pink'>gemini://tilde.pink</a></pre></li>
-<li><pre><span><a href="#13"> 13| </a></span><a id="13" href='https://no-proto#cool'>no-proto#cool</a></pre></li>
-<li><pre><span><a href="#14"> 14| </a></span><a id="14" href='http://example.com:80/a?query=nothn+much&nada_arg#fragment%20is%20cool'>http://example.com:80/a?query=nothn much&amp;nada_arg#fragment is cool</a></pre></li>
-<li><pre><span><a href="#16"> 16| </a></span><a id="16" href='https://just a?anoth+er=on+e%3D&here%27s+some=more&que+ry&nope'>just a?que ry&amp;anoth er=on e=&amp;here&#x27;s some=more&amp;nope</a></pre></li>
-<li><pre><span><a href="#17"> 17| </a></span><a id="17" href='https://no_protocol?&%3F'>no_protocol??</a></pre></li>
+<li><pre><span><a href="#6">  6| </a></span><a id="6" href='https://et.wikipedia.org'>https://et.wikipedia.org</a></pre></li>
+<li><pre><span><a href="#7">  7| </a></span><a id="7" href='htp:/inv%3Ca%3Elisd%3E%26#123%3B%26amp%3B%3B'>htp:/inv&lt;a&gt;lisd&gt;&amp;#123;&amp;amp;;</a></pre></li>
+<li><pre><span><a href="#8">  8| </a></span><a id="8" href='https://wer.ee'>https://wer.ee</a></pre></li>
+<li><pre><span><a href="#9">  9| </a></span><a id="9" href='ssh://user@localhost'>ssh://user@localhost</a></pre></li>
+<li><pre><span><a href="#10"> 10| </a></span><a id="10" href='https://haha not a proto here'>haha not a proto here</a></pre></li>
+<li><pre><span><a href="#11"> 11| </a></span><a id="11" href='https://lolz no protolol/%2Band%20a%20bit%20of%20path%2B'>lolz no protolol/and a bit of path</a></pre></li>
+<li><pre><span><a href="#12"> 12| </a></span><a id="12" href='http://hello there/ok%20nice'>http://hello there/ok nice</a></pre></li>
+<li><pre><span><a href="#13"> 13| </a></span><a id="13" href='gemini://tilde.pink'>gemini://tilde.pink</a></pre></li>
+<li><pre><span><a href="#14"> 14| </a></span><a id="14" href='https://no-proto#cool'>no-proto#cool</a></pre></li>
+<li><pre><span><a href="#15"> 15| </a></span><a id="15" href='http://example.com:80/a?query=nothn+much&nada_arg#fragment%20is%20cool'>http://example.com:80/a?query=nothn much&amp;nada_arg#fragment is cool</a></pre></li>
+<li><pre><span><a href="#17"> 17| </a></span><a id="17" href='https://just a?anoth+er=on+e%3D&here%27s+some=more&que+ry&nope'>just a?que ry&amp;anoth er=on e=&amp;here&#x27;s some=more&amp;nope</a></pre></li>
+<li><pre><span><a href="#18"> 18| </a></span><a id="18" href='https://no_protocol?&%3F'>no_protocol??</a></pre></li>
 
 </ul></body></html>
