--- a/x.html
+++ b/x.html
@@ -1,7 +1,7 @@
 <html><head><title>bookmarklist.py</title>
 <link rel="stylesheet" type="text/css" href="style.css" media="screen"/>
 </head><body><ul>
-<li><pre><span><a href="#1">  1| </a></span><a id="1" href='https://vikipeedia!'>https://et.wikipedia.org</a></pre></li>
+<li><pre><span><a href="#1">  1| </a></span><a id="1" href='https://et.wikipedia.org'>vikipeedia!</a></pre></li>
 <li><pre><span><a href="#2">  2| </a></span><a id="2" href='https://super.secret.intra'>https://super.secret.intra</a></pre></li>
 <li><pre><span><a href="#3">  3| </a></span><a id="3" href='http://localhost:8080'>http://localhost:8080</a></pre></li>
 <li><pre><span><a href="#4">  4| </a></span><a id="4" href='https://example.com'>https://example.com</a></pre></li>
