--- a/x.html
+++ b/x.html
@@ -19,5 +19,6 @@
 <li><pre><span><a href="#16"> 16| </a></span><a id="16" href='http://example.com:80/a?query=nothn+much&nada_arg#fragment%20is%20cool'>http://example.com:80/a?query=nothn much&amp;nada_arg#fragment is cool</a></pre></li>
 <li><pre><span><a href="#18"> 18| </a></span><a id="18" href='https://just a?anoth+er=on+e%3D&here%27s+some=more&que+ry&nope'>just a?que ry&amp;anoth er=on e=&amp;here&#x27;s some=more&amp;nope</a></pre></li>
 <li><pre><span><a href="#19"> 19| </a></span><a id="19" href='https://no_protocol?&%3F'>no_protocol??</a></pre></li>
+<li><pre><span><a href="#20"> 20| </a></span><a id="20" href='https://ultrasuperlonglinklolultrasuperlonglinklolultrasuperlonglinklolultrasuperlonglinklolultrasuperlonglinklolultrasuperlonglinklolultrasuperlonglinklolultrasuperlonglinklolultrasuperlonglinklolultrasuperlonglinklol'>ultrasuperlonglinklolultrasuperlonglinklolultrasuperlonglinklolultrasuperlonglinklolultrasuperlonglinklolultrasuperlonglinklolultrasuperlonglinklolultrasuperlonglinklolultrasuperlonglinklolultrasuperlonglinklol</a></pre></li>
 
 </ul></body></html>
