--- a/x.html
+++ b/x.html
@@ -1,24 +1,24 @@
 <!DOCTYPE html><html><head><title>bookmarklist.py</title>
 <link rel="stylesheet" type="text/css" href="style.css" media="screen"/>
 </head><body><ul>
-<li><pre><span class="nr"><a href="#1" class="nr" >  1</a></span><a id="1" href='https://et.wikipedia.org'>vikipeedia!</a></pre></li>
-<li><pre><span class="nr"><a href="#2" class="nr" >  2</a></span><a id="2" href='https://super.secret.intra'>https://super.secret.intra</a></pre></li>
-<li><pre><span class="nr"><a href="#3" class="nr" >  3</a></span><a id="3" href='http://localhost:8080'>http://localhost:8080</a></pre></li>
-<li><pre><span class="nr"><a href="#4" class="nr" >  4</a></span><a id="4" href='https://example.com'>example domain</a></pre></li>
-<li><pre><span class="nr"><a href="#5" class="nr" >  5</a></span><a id="5" href='http://ww.ee'>http://ww.ee</a></pre></li>
-<li><pre><span class="nr"><a href="#6" class="nr" >  6</a></span><a id="6" href='https://et.wikipedia.org'>https://et.wikipedia.org</a></pre></li>
-<li><pre><span class="nr"><a href="#7" class="nr" >  7</a></span><a id="7" href='htp:/inv%3Ca%3Elisd%3E%26#123%3B%26amp%3B%3B'>htp:/inv&lt;a&gt;lisd&gt;&amp;#123;&amp;amp;;</a></pre></li>
-<li><pre><span class="nr"><a href="#8" class="nr" >  8</a></span><a id="8" href='https://wer.ee'>jan6&#x27;s page</a></pre></li>
-<li><pre><span class="nr"><a href="#9" class="nr" >  9</a></span><a id="9" href='ssh://user@localhost'>ssh://user@localhost</a></pre></li>
-<li><pre><span class="nr"><a href="#10" class="nr" > 10</a></span><a id="10" href='https://haha not a proto here'>haha not a proto here</a></pre></li>
-<li><pre><span class="nr"><a href="#11" class="nr" > 11</a></span><a id="11" href='https://lolz no protolol/%2Band%20a%20bit%20of%20path%2B'>lolz no protolol/and a bit of path</a></pre></li>
-<li><pre><span class="nr"><a href="#12" class="nr" > 12</a></span><a id="12" href='http://hello there/ok%20nice'>http://hello there/ok nice</a></pre></li>
-<li><pre><span class="nr"><a href="#13" class="nr" > 13</a></span><a id="13" href='gemini://tilde.pink'>gemini://tilde.pink</a></pre></li>
-<li><pre><span class="nr"><a href="#14" class="nr" > 14</a></span><a id="14" href='gopher://gopher.floodgap.com/1/world'>floodgap gopher list of gophers</a></pre></li>
-<li><pre><span class="nr"><a href="#15" class="nr" > 15</a></span><a id="15" href='https://no-proto#cool'>no-proto#cool</a></pre></li>
-<li><pre><span class="nr"><a href="#16" class="nr" > 16</a></span><a id="16" href='http://example.com:80/a?query=nothn+much&nada_arg#fragment%20is%20cool'>http://example.com:80/a?query=nothn much&amp;nada_arg#fragment is cool</a></pre></li>
-<li><pre><span class="nr"><a href="#18" class="nr" > 18</a></span><a id="18" href='https://just a?anoth+er=on+e%3D&here%27s+some=more&que+ry&nope'>just a?que ry&amp;anoth er=on e=&amp;here&#x27;s some=more&amp;nope</a></pre></li>
-<li><pre><span class="nr"><a href="#19" class="nr" > 19</a></span><a id="19" href='https://no_protocol?&%3F'>no_protocol??</a></pre></li>
-<li><pre><span class="nr"><a href="#20" class="nr" > 20</a></span><a id="20" href='https://ultrasuperlonglinklolultrasuperlonglinklolultrasuperlonglinklolultrasuperlonglinklolultrasuperlonglinklolultrasuperlonglinklolultrasuperlonglinklolultrasuperlonglinklolultrasuperlonglinklolultrasuperlonglinklol'>ultrasuperlonglinklolultrasuperlonglinklolultrasuperlonglinklolultrasuperlonglinklolultrasuperlonglinklolultrasuperlonglinklolultrasuperlonglinklolultrasuperlonglinklolultrasuperlonglinklolultrasuperlonglinklol</a></pre></li>
+<li><pre><span class="nr"><a href="#1" class="nr" >  1</a></span><a id="1" href="https://et.wikipedia.org">vikipeedia!</a></pre></li>
+<li><pre><span class="nr"><a href="#2" class="nr" >  2</a></span><a id="2" href="https://super.secret.intra">https://super.secret.intra</a></pre></li>
+<li><pre><span class="nr"><a href="#3" class="nr" >  3</a></span><a id="3" href="http://localhost:8080">http://localhost:8080</a></pre></li>
+<li><pre><span class="nr"><a href="#4" class="nr" >  4</a></span><a id="4" href="https://example.com">example domain</a></pre></li>
+<li><pre><span class="nr"><a href="#5" class="nr" >  5</a></span><a id="5" href="http://ww.ee">http://ww.ee</a></pre></li>
+<li><pre><span class="nr"><a href="#6" class="nr" >  6</a></span><a id="6" href="https://et.wikipedia.org">https://et.wikipedia.org</a></pre></li>
+<li><pre><span class="nr"><a href="#7" class="nr" >  7</a></span><a id="7" href="htp:/inv%3Ca%3Elisd%3E%26#123%3B%26amp%3B%3B">htp:/inv&lt;a&gt;lisd&gt;&amp;#123;&amp;amp;;</a></pre></li>
+<li><pre><span class="nr"><a href="#8" class="nr" >  8</a></span><a id="8" href="https://wer.ee">jan6&#x27;s page</a></pre></li>
+<li><pre><span class="nr"><a href="#9" class="nr" >  9</a></span><a id="9" href="ssh://user@localhost">ssh://user@localhost</a></pre></li>
+<li><pre><span class="nr"><a href="#10" class="nr" > 10</a></span><a id="10" href="https://hahanotaprotohere">haha not a proto here</a></pre></li>
+<li><pre><span class="nr"><a href="#11" class="nr" > 11</a></span><a id="11" href="https://lolznoprotolol/%2Band%20a%20bit%20of%20path%2B">lolz no protolol/and a bit of path</a></pre></li>
+<li><pre><span class="nr"><a href="#12" class="nr" > 12</a></span><a id="12" href="http://hello there/ok%20nice">http://hello there/ok nice</a></pre></li>
+<li><pre><span class="nr"><a href="#13" class="nr" > 13</a></span><a id="13" href="gemini://tilde.pink">gemini://tilde.pink</a></pre></li>
+<li><pre><span class="nr"><a href="#14" class="nr" > 14</a></span><a id="14" href="gopher://gopher.floodgap.com/1/world">floodgap gopher list of gophers</a></pre></li>
+<li><pre><span class="nr"><a href="#15" class="nr" > 15</a></span><a id="15" href="https://noproto#cool">no-proto#cool</a></pre></li>
+<li><pre><span class="nr"><a href="#16" class="nr" > 16</a></span><a id="16" href="http://example.com:80/a?query=nothn+much&nada_arg#fragment%20is%20cool">http://example.com:80/a?query=nothn much&amp;nada_arg#fragment is cool</a></pre></li>
+<li><pre><span class="nr"><a href="#18" class="nr" > 18</a></span><a id="18" href="https://justa?anoth+er=on+e%3D&here%27s+some=more&que+ry&nope">just a?que ry&amp;anoth er=on e=&amp;here&#x27;s some=more&amp;nope</a></pre></li>
+<li><pre><span class="nr"><a href="#19" class="nr" > 19</a></span><a id="19" href="https://noprotocol?&%3F">no_protocol??</a></pre></li>
+<li><pre><span class="nr"><a href="#20" class="nr" > 20</a></span><a id="20" href="https://ultrasuperlonglinklolultrasuperlonglinklolultrasuperlonglinklolultrasuperlonglinklolultrasuperlonglinklolultrasuperlonglinklolultrasuperlonglinklolultrasuperlonglinklolultrasuperlonglinklolultrasuperlonglinklol">ultrasuperlonglinklolultrasuperlonglinklolultrasuperlonglinklolultrasuperlonglinklolultrasuperlonglinklolultrasuperlonglinklolultrasuperlonglinklolultrasuperlonglinklolultrasuperlonglinklolultrasuperlonglinklol</a></pre></li>
 
 </ul></body></html>
